--- a/quartz/styles/variables.scss
+++ b/quartz/styles/variables.scss
@@ -15,7 +15,7 @@ $tablet: "(min-width: #{map-get($breakpoints, mobile)}) and (max-width: #{map-ge
 $desktop: "(max-width: #{map-get($breakpoints, desktop)})";
 
 $pageWidth: #{map-get($breakpoints, mobile)};
-$sidePanelWidth: 320px; //380px;
+$sidePanelWidth: 200px; //380px;
 $topSpacing: 6rem;
 $boldWeight: 700;
 $semiBoldWeight: 600;
@@ -26,8 +26,7 @@ $mobileGrid: (
   templateColumns: "auto",
   rowGap: "5px",
   columnGap: "5px",
-  templateAreas:
-    '"sidebar-left"\
+  templateAreas: '"sidebar-left"\
       "page-header"\
       "page-center"\
       "sidebar-right"\
@@ -38,8 +37,7 @@ $tabletGrid: (
   templateColumns: "#{$sidePanelWidth} auto",
   rowGap: "5px",
   columnGap: "5px",
-  templateAreas:
-    '"sidebar-left page-header"\
+  templateAreas: '"sidebar-left page-header"\
       "sidebar-left page-center"\
       "sidebar-left sidebar-right"\
       "sidebar-left page-footer"',
@@ -49,8 +47,7 @@ $desktopGrid: (
   templateColumns: "#{$sidePanelWidth} auto #{$sidePanelWidth}",
   rowGap: "5px",
   columnGap: "5px",
-  templateAreas:
-    '"sidebar-left page-header sidebar-right"\
+  templateAreas: '"sidebar-left page-header sidebar-right"\
       "sidebar-left page-center sidebar-right"\
       "sidebar-left page-footer sidebar-right"',
 );
